[gd_scene load_steps=2 format=3 uid="uid://cs5umto3yi0cn"]

[ext_resource type="Script" uid="uid://8tl4o3nq8bjr" path="res://scenes/gameplay/expansionui.gd" id="1_uvmst"]

[node name="Expansion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uvmst")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="title_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Expansion"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="map_wrap" type="CenterContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="map" type="Control" parent="MarginContainer/VBoxContainer/HSplitContainer/map_wrap"]
custom_minimum_size = Vector2(640, 480)
layout_mode = 2

[node name="side" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="tabs" type="TabContainer" parent="MarginContainer/VBoxContainer/HSplitContainer/side"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="Troops" type="Control" parent="MarginContainer/VBoxContainer/HSplitContainer/side/tabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="troops_label" type="Label" parent="MarginContainer/VBoxContainer/HSplitContainer/side/tabs/Troops"]
layout_mode = 1
offset_right = 1.0
offset_bottom = 32.0

[node name="troops_desc" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HSplitContainer/side/tabs/Troops"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fit_content = true

[node name="Buffs" type="Control" parent="MarginContainer/VBoxContainer/HSplitContainer/side/tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="buffs_list" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HSplitContainer/side/tabs/Buffs"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
fit_content = true

[node name="bottom_bar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="btn_menu" type="Button" parent="bottom_bar"]
layout_mode = 2
text = "Menu"

[node name="btn_game" type="Button" parent="bottom_bar"]
layout_mode = 2
text = "Back to Game"
